# scry-trader

./: BUILD.md  CLAUDE.md  CODE-REVIEW.md  README.md  config.toml  pyproject.toml
src/augur/: __init__.py  analyst.py  broker.py  cli.py  config.py  journal.py  models.py  risk.py
src/augur/prompts/: system.py  tools.py
tests/: test_analyst.py  test_broker.py  test_cli.py  test_config.py  test_journal.py  test_models.py  test_risk.py
