[project]
name = "augur"
version = "0.1.0"
description = "AI-assisted, human-directed trading system built on Claude and Interactive Brokers"
readme = "README.md"
authors = [
    { name = "dunamismax", email = "dunamismax@tutamail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "ib-async==2.1.0",
    "anthropic==0.84.0",
    "click==8.3.1",
    "rich==14.3.3",
    "pydantic==2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.4",
    "mypy==1.19.1",
]

[project.scripts]
augur = "augur.cli:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["ib_async.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
